Changed the Search Request Parameter function to be adaptable with id and name without requiring them.
